# OpenEdu

./: .gitignore  index.html  package-lock.json  package.json
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: ChatTab.tsx  ContextMenu.tsx  ErrorBoundary.tsx  NotesTab.tsx  PromotionTestModal.tsx  QuizTab.tsx  Sidebar.tsx
src/components/quiz/: QuestionRenderer.tsx
src/lib/: curriculum.ts  db.ts  knowledge.ts  llm.ts  progress.ts  quiz.ts  store.ts  tutor-modes.ts  web-search.ts
src/types/: index.ts
src/views/: CourseView.tsx  Dashboard.tsx  PromotionTestFullScreen.tsx  QuizFullScreen.tsx  Settings.tsx
