[package]
name = "terraturor"
version = "0.1.0"
description = "TerraTutor - AI-powered personalized learning"
authors = ["TerraByte"]
edition = "2021"

[lib]
name = "terraturor_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
tauri-plugin-http = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
